--- a/Soundtrack Finder/Soundtrack Finder.csproj
+++ b/Soundtrack Finder/Soundtrack Finder.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{54182BA0-0D8D-4C93-A1FF-6011A07BE6B6}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>Soundtrack_Finder</RootNamespace>
-    <AssemblyName>Soundtrack Finder</AssemblyName>
+    <AssemblyName>AQ Soundtrack Finder</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
